@@ -1,11 +1,14 @@
 package Mojo::IOLoop::Delay;
 use Mojo::Base 'Mojo::EventEmitter';
 
+use Exporter 'import';
 use Mojo::IOLoop;
 use Mojo::Util;
 
 has ioloop    => sub { Mojo::IOLoop->singleton };
 has remaining => sub { [] };
+
+our @EXPORT_OK = ('delay');
 
 sub begin {
   my ($self, $offset, $len) = @_;
@@ -15,6 +18,8 @@ sub begin {
 }
 
 sub data { Mojo::Util::_stash(data => @_) }
+
+sub delay { @_ ? __PACKAGE__->new->steps(@_) : __PACKAGE__->new }
 
 sub pass { $_[0]->begin->(@_) }
 
@@ -60,7 +65,7 @@ sub _step {
 
 =head1 NAME
 
-Mojo::IOLoop::Delay - Manage callbacks and control the flow of events
+Mojo::IOLoop::Delay - Flow-control utilities
 
 =head1 SYNOPSIS
 
@@ -103,8 +108,9 @@ Mojo::IOLoop::Delay - Manage callbacks and control the flow of events
     }
   )->wait;
 
-  # Handle exceptions in all steps
-  Mojo::IOLoop::Delay->new->steps(
+  # Use the alternative constructor (and handle exceptions in all steps)
+  use Mojo::IOLoop::Delay 'delay';
+  delay(
     sub {
       my $delay = shift;
       die 'Intentional error';
@@ -120,9 +126,8 @@ Mojo::IOLoop::Delay - Manage callbacks and control the flow of events
 
 =head1 DESCRIPTION
 
-L<Mojo::IOLoop::Delay> manages callbacks and controls the flow of events for
-L<Mojo::IOLoop>, which can help you avoid deep nested closures that often
-result from continuation-passing style.
+L<Mojo::IOLoop::Delay> is a set of flow-control utilities that can help you
+avoid deep nested closures that often result from continuation-passing style.
 
   use Mojo::IOLoop;
 
@@ -152,9 +157,10 @@ a code reference that we can pass to L<Mojo::IOLoop/"timer"> as a callback, and
 that leads to the next closure in the series when executed.
 
   use Mojo::IOLoop;
+  use Mojo::IOLoop::Delay 'delay';
 
   # Instead of nested closures we now have a simple chain
-  my $delay = Mojo::IOloop->delay(
+  my $delay = delay(
     sub {
       my $delay = shift;
       Mojo::IOLoop->timer(3 => $delay->begin);
@@ -205,6 +211,20 @@ fatal if unhandled.
 
 Emitted once the event counter reaches zero and there are no more steps.
 
+=head1 FUNCTIONS
+
+L<Mojo::IOLoop::Delay> implements the following functions, which can be imported
+individually.
+
+=head2 delay
+
+  my $delay = delay;
+  my $delay = delay(sub {...});
+  my $delay = delay(sub {...}, sub {...});
+
+Construct a new L<Mojo::IOLoop::Delay> object. Callbacks will be passed along to
+L</"steps>.
+
 =head1 ATTRIBUTES
 
 L<Mojo::IOLoop::Delay> implements the following attributes.
@@ -241,7 +261,7 @@ references generated by this method have been executed and the event counter has
 reached zero, L</"steps"> will continue.
 
   # Capture all arguments except for the first one (invocant)
-  my $delay = Mojo::IOLoop->delay(sub {
+  my $delay = delay(sub {
     my ($delay, $err, $stream) = @_;
     ...
   });
@@ -254,7 +274,7 @@ arguments are then combined in the same order L</"begin"> was called, and passed
 together to the next step or L</"finish"> event.
 
   # Capture all arguments
-  my $delay = Mojo::IOLoop->delay(sub {
+  my $delay = delay(sub {
     my ($delay, $loop, $err, $stream) = @_;
     ...
   });
@@ -262,7 +282,7 @@ together to the next step or L</"finish"> event.
   $delay->wait;
 
   # Capture only the second argument
-  my $delay = Mojo::IOLoop->delay(sub {
+  my $delay = delay(sub {
     my ($delay, $err) = @_;
     ...
   });
@@ -270,7 +290,7 @@ together to the next step or L</"finish"> event.
   $delay->wait;
 
   # Capture and combine arguments
-  my $delay = Mojo::IOLoop->delay(sub {
+  my $delay = delay(sub {
     my ($delay, $three_err, $three_stream, $four_err, $four_stream) = @_;
     ...
   });
