@@ -5,6 +5,7 @@ use Mojo::ByteStream;
 use Mojo::Collection;
 use Mojo::Exception;
 use Mojo::IOLoop;
+use Mojo::IOLoop::Delay 'delay';
 use Mojo::Util qw(dumper hmac_sha1_sum steady_time);
 use Scalar::Util 'blessed';
 
@@ -80,7 +81,7 @@ sub _current_route {
 sub _delay {
   my $c     = shift;
   my $tx    = $c->render_later->tx;
-  my $delay = Mojo::IOLoop->delay(@_);
+  my $delay = delay(@_);
   $delay->catch(sub { $c->helpers->reply->exception(pop) and undef $tx })->wait;
 }
 
@@ -303,7 +304,7 @@ Check or get name of current route.
 
   $c->delay(sub {...}, sub {...});
 
-Disable automatic rendering and use L<Mojo::IOLoop/"delay"> to manage callbacks
+Disable automatic rendering and use L<Mojo::IOLoop::Delay> to manage callbacks
 and control the flow of events, which can help you avoid deep nested closures
 that often result from continuation-passing style. Also keeps a reference to
 L<Mojolicious::Controller/"tx"> in case the underlying connection gets closed
@@ -313,7 +314,7 @@ of the steps, breaking the chain.
   # Longer version
   $c->render_later;
   my $tx    = $c->tx;
-  my $delay = Mojo::IOLoop->delay(sub {...}, sub {...});
+  my $delay = delay(sub {...}, sub {...});
   $delay->catch(sub { $c->reply->exception(pop) and undef $tx })->wait;
 
   # Non-blocking request
