@@ -11,6 +11,7 @@ use IO::Socket::INET;
 use Mojo;
 use Mojo::File 'path';
 use Mojo::IOLoop;
+use Mojo::IOLoop::Delay 'delay';
 use Mojo::Log;
 use Mojo::Server::Daemon;
 use Mojo::UserAgent;
@@ -202,7 +203,7 @@ is $tx->res->body, 'Whatever!', 'right content';
 
 # Concurrent requests
 my ($tx2, $tx3);
-my $delay = Mojo::IOLoop->delay(sub { (undef, $tx, $tx2, $tx3) = @_ });
+my $delay = delay(sub { (undef, $tx, $tx2, $tx3) = @_ });
 $ua->get('/concurrent1/' => $delay->begin);
 $ua->post(
   '/concurrent2/' => {Expect => 'fun'} => 'bar baz foo' x 128 => $delay->begin);
