@@ -11,6 +11,7 @@ plan skip_all => 'IO::Socket::SSL 1.94+ required for this test!'
   unless Mojo::IOLoop::TLS->can_tls;
 
 use Mojo::IOLoop;
+use Mojo::IOLoop::Delay 'delay';
 use Socket;
 
 # Built-in certificate
@@ -18,7 +19,7 @@ socketpair(my $client_sock, my $server_sock, AF_UNIX, SOCK_STREAM, PF_UNSPEC)
   or die "Couldn't create socket pair: $!";
 $client_sock->blocking(0);
 $server_sock->blocking(0);
-my $delay  = Mojo::IOLoop->delay;
+my $delay  = delay;
 my $server = Mojo::IOLoop::TLS->new($server_sock);
 $server->once(upgrade => $delay->begin);
 $server->once(error => sub { warn pop });
@@ -39,7 +40,7 @@ socketpair(my $client_sock2, my $server_sock2, AF_UNIX, SOCK_STREAM, PF_UNSPEC)
   or die "Couldn't create socket pair: $!";
 $client_sock2->blocking(0);
 $server_sock2->blocking(0);
-$delay  = $loop->delay;
+$delay = Mojo::IOLoop::Delay->new(ioloop => $loop);
 $server = Mojo::IOLoop::TLS->new($server_sock2)->reactor($loop->reactor);
 $server->once(upgrade => $delay->begin);
 $server->once(error => sub { warn pop });
