@@ -1,5 +1,7 @@
 
 7.49  2017-10-21
+  - Deprecated Mojo::IOLoop::delay in favor of Mojo::IOLoop::Delay::delay.
+  - Added delay function to Mojo::IOLoop::Delay.
   - Updated jQuery to version 3.2.1.
 
 7.48  2017-10-19
